[gd_scene load_steps=9 format=3 uid="uid://c7sjf1mk8drya"]

[ext_resource type="Script" path="res://Scenes/admin_panel.gd" id="1_0ufeo"]
[ext_resource type="StyleBox" uid="uid://c3nl2fr2yle2k" path="res://Assets/Styles/blue_button.tres" id="4_515pg"]
[ext_resource type="PackedScene" uid="uid://l68yt0p14fpf" path="res://Objects/cool_button.tscn" id="5_8dq3o"]
[ext_resource type="StyleBox" uid="uid://sj4sw626k6fa" path="res://Assets/Styles/hover_button.tres" id="5_whln5"]
[ext_resource type="StyleBox" uid="uid://dd5xkjppnprpd" path="res://Assets/Styles/pressed_button.tres" id="6_12tl8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2u0lb"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.552941, 0.686275, 0.811765, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0uu5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0tter"]

[node name="AdminPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2u0lb")
script = ExtResource("1_0ufeo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Left" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.33
theme_override_constants/separation = 25

[node name="ChangeNames" parent="HBoxContainer/Right" instance=ExtResource("5_8dq3o")]
layout_mode = 2
text = "Изменить имена деревьев"

[node name="ChangeCompat" parent="HBoxContainer/Right" instance=ExtResource("5_8dq3o")]
layout_mode = 2
text = "Редактировать совместимость деревьев"

[node name="ChangePlantations" parent="HBoxContainer/Right" instance=ExtResource("5_8dq3o")]
layout_mode = 2
text = "Редактировать насаждения"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Right"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_h0uu5")

[node name="InEditor" type="Button" parent="HBoxContainer/Right"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("4_515pg")
theme_override_styles/hover = ExtResource("5_whln5")
theme_override_styles/pressed = ExtResource("6_12tl8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0tter")
text = "В редактор"

[node name="Exit2" type="Button" parent="HBoxContainer/Right"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("4_515pg")
theme_override_styles/hover = ExtResource("5_whln5")
theme_override_styles/pressed = ExtResource("6_12tl8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0tter")
text = "В поиск"

[connection signal="button_up" from="HBoxContainer/Right/InEditor" to="." method="_on_in_editor_button_up"]
[connection signal="button_up" from="HBoxContainer/Right/Exit2" to="." method="_on_exit_button_up"]
